<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/pref_app_header">

        <DropDownPreference
            app:key="default_activity"
            app:title="@string/pref_app_home_activity"
            app:defaultValue="@string/default_activity"
            app:entries="@array/activities" />

        <DropDownPreference
            app:key="theme"
            app:title="@string/pref_app_theme"
            app:entries="@array/themes" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/pref_network_header">

        <EditTextPreference
            app:key="host"
            app:title="@string/pref_net_host"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="port"
            app:title="@string/pref_net_port"
            app:defaultValue="@string/pref_net_default_port"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/pref_scan_header">

        <SwitchPreferenceCompat
            app:key="auto_scan"
            app:summaryOff="@string/pref_auto_scan_off"
            app:summaryOn="@string/pref_auto_scan_on"
            app:title="@string/pref_auto_scan" />

    </PreferenceCategory>

</PreferenceScreen>