<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

<!--    <PreferenceCategory app:title="@string/pref_app_header">-->

<!--        <ListPreference-->
<!--            app:defaultValue="@string/default_activity"-->
<!--            app:entries="@array/activities"-->
<!--            app:entryValues="@array/activities_keys"-->
<!--            app:useSimpleSummaryProvider="true"-->
<!--            app:key="default_activity"-->
<!--            app:title="@string/pref_app_home_activity" />-->

<!--        <ListPreference-->
<!--            app:entries="@array/themes"-->
<!--            app:entryValues="@array/themes_keys"-->
<!--            app:useSimpleSummaryProvider="true"-->
<!--            app:key="theme"-->
<!--            app:title="@string/pref_app_theme" />-->

<!--    </PreferenceCategory>-->

    <PreferenceCategory app:title="Camera">
        <ListPreference
            app:key="camera_resolution"
            app:title="Barcode scanning camera resolution"/>
        <SwitchPreference
            app:key="live_preview"
            app:title="Live Preview"
            app:summary="@string/enable_preview_summary" />

        <ListPreference
            app:defaultValue="@string/lifetime_duration_default"
            app:entries="@array/camera_lifetime_keys"
            app:entryValues="@array/camera_lifetime_vals"
            app:key="lifetime_duration"
            app:title="@string/lifetime_duration_title"
            app:summary="@string/lifetime_duration_summary" />

        <MultiSelectListPreference
            app:entries="@array/barcode_format_keys"
            app:entryValues="@array/barcode_format_vals"
            app:key="accepted_barcode_formats"
            app:summary="Formats the scanner will try to find. Limiting this list can help the scanner perform better."
            app:title="Accepted Barcode Formats" />
    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/pref_list_display_header"
        app:summary="@string/pref_list_display_summary">

        <SwitchPreferenceCompat
            app:key="display_location"
            app:defaultValue="true"
            app:title="@string/pref_list_display_location" />
        <SwitchPreferenceCompat
            app:key="display_matl"
            app:defaultValue="true"
            app:title="@string/pref_list_display_matl" />
        <SwitchPreferenceCompat
            app:key="display_heat"
            app:defaultValue="true"
            app:title="@string/pref_list_display_heat" />
        <SwitchPreferenceCompat
            app:key="display_po"
            app:defaultValue="true"
            app:title="@string/pref_list_display_po" />

    </PreferenceCategory>

<!--    <PreferenceCategory app:title="@string/pref_network_header">-->

<!--        <EditTextPreference-->
<!--            app:key="host"-->
<!--            app:title="@string/pref_net_host"-->
<!--            app:useSimpleSummaryProvider="true" />-->

<!--        <EditTextPreference-->
<!--            app:defaultValue="@string/pref_net_default_port"-->
<!--            app:key="port"-->
<!--            app:title="@string/pref_net_port"-->
<!--            app:useSimpleSummaryProvider="true" />-->

<!--    </PreferenceCategory>-->

    <PreferenceCategory app:title="@string/pref_misc_header">
        <SwitchPreference
            app:key="debug_mode"
            app:title="Debug mode"/>

    </PreferenceCategory>

</PreferenceScreen>