<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_barcode_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddBarcodeActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="?attr/homeAsUpIndicator" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="150dp" />


    <TextView
        android:id="@+id/label_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/id_label"
        android:labelFor="@id/barcode_id"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@id/label_mm"
        app:layout_constraintEnd_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <TextView
        android:id="@+id/barcode_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:minWidth="120dp"
        app:layout_constraintBaseline_toBaselineOf="@id/label_id"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <ImageButton
        android:id="@+id/btn_set_barcode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/set_barcode_desc"
        android:minHeight="48dp"
        android:src="@drawable/ic_qrcode"
        app:layout_constraintBottom_toBottomOf="@+id/barcode_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/barcode_id"
        app:layout_constraintTop_toTopOf="@+id/barcode_id" />

    <TextView
        android:id="@+id/label_mm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mm_label"
        android:labelFor="@id/txt_mm"
        app:layout_constraintBottom_toTopOf="@id/label_grade"
        app:layout_constraintEnd_toEndOf="@id/label_id"
        app:layout_constraintTop_toBottomOf="@id/label_id"/>

    <EditText
        android:id="@+id/txt_mm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="Material Master"
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintBaseline_toBaselineOf="@id/label_mm"
        app:layout_constraintStart_toStartOf="@+id/barcode_id" />

    <TextView
        android:id="@+id/label_grade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/grade_label"
        android:labelFor="@id/txt_grade"
        app:layout_constraintBottom_toTopOf="@id/label_loc"
        app:layout_constraintEnd_toEndOf="@id/label_mm"
        app:layout_constraintTop_toBottomOf="@id/label_mm"/>

    <EditText
        android:id="@+id/txt_grade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="Grade"
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintBaseline_toBaselineOf="@id/label_grade"
        app:layout_constraintStart_toStartOf="@+id/txt_mm" />

    <TextView
        android:id="@+id/label_loc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loc_label"
        android:labelFor="@id/txt_loc"
        app:layout_constraintBottom_toTopOf="@id/label_heat"
        app:layout_constraintEnd_toEndOf="@id/label_grade"
        app:layout_constraintTop_toBottomOf="@id/label_grade"/>

<!--    TODO: change to textview once change location spinner is impl-->
    <EditText
        android:id="@+id/txt_loc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="Location"
        android:inputType="text"
        android:minWidth="60dp"
        android:minHeight="48dp"
        app:layout_constraintBaseline_toBaselineOf="@id/label_loc"
        app:layout_constraintStart_toStartOf="@+id/txt_grade" />

    <Button
        android:id="@+id/btn_change_loc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_change_location_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/txt_loc"
        app:layout_constraintTop_toTopOf="@id/txt_loc"
        app:layout_constraintBottom_toBottomOf="@id/txt_loc" />

    <TextView
        android:id="@+id/label_heat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/heat_label"
        android:labelFor="@id/txt_heat"
        app:layout_constraintEnd_toEndOf="@id/label_loc"
        app:layout_constraintTop_toBottomOf="@id/label_loc"
        app:layout_constraintBottom_toTopOf="@id/label_po" />

    <EditText
        android:id="@+id/txt_heat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="Heat Number"
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintBaseline_toBaselineOf="@id/label_heat"
        app:layout_constraintStart_toStartOf="@+id/txt_loc" />

    <TextView
        android:id="@+id/label_po"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/po_label"
        android:labelFor="@id/txt_po"
        app:layout_constraintBottom_toTopOf="@id/btn_submit"
        app:layout_constraintEnd_toEndOf="@id/label_heat"
        app:layout_constraintTop_toBottomOf="@id/label_heat" />

    <EditText
        android:id="@+id/txt_po"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="PO Number"
        android:ems="10"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintBaseline_toBaselineOf="@id/label_po"
        app:layout_constraintStart_toStartOf="@+id/txt_heat" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_btn_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_po" />

</androidx.constraintlayout.widget.ConstraintLayout>